checkpoint.. working towards copying a broken view to new column names

--- a/WebGUI/html/ConfigurationGUI.html
+++ b/WebGUI/html/ConfigurationGUI.html
@@ -150,6 +150,7 @@
 			//versionHasChanged()
 		
 			//setupCopyAndMoveRows()
+			//configCopyView()
 			//configCopyRow(deleteSrc)					//copy/move row from source to destination row			
 			//evaluateJS(str)
 			//jump(anchor)
@@ -162,9 +163,9 @@
 		function init() {			
 			Debug.log("CfgGUI init");
 						
-			//setupSpecificConfig("XDAQContextConfiguration","8",
-			//"setupTableViewMode('anchorTag-XDAQContextConfiguration');");
-			//return;
+			setupSpecificConfig("XDAQContextConfiguration","8",
+			"setupTableViewMode('anchorTag-XDAQContextConfiguration');");
+			return;
 
 			//setupSpecificConfigGroup("PhysicsWizToLatest","3",
 				//	"");//"","anchorTag-RawDataSaverConsumerConfiguration");
@@ -1031,13 +1032,13 @@
 				Debug.log("Back-link = " + backLinkStr);
 
 				str += "<a href='javascript:evaluateJS(\"" + backLinkStr + "\")'>Back</a>";
-				str += "<br>";
+				str += "<br><br>";
 			}
 	
 			str += "<b>" + configName + "</b> (version: " + (version==-1?"Mockup-View":version) + ")<br>";
 			
 			str += "<a href='javascript:setupFindAndReplace()'>Find and Replace</a><div id='findAndReplace'></div>";
-			str += "<a href='javascript:setupCopyAndMoveRows()'>Copy and Move Rows</a><div id='copyAndMoveRows'></div>";
+			str += "<a href='javascript:setupCopyAndMoveRows()'>Copy and Move</a><div id='copyAndMoveRows'></div>";
 			str += "<input type='checkbox' id='useTableLinkDropdownCheckbox' " +
 					(_useTableLinkDropdown?"checked":"") + 
 					" onchange='_useTableLinkDropdown = this.checked;'> Use Table Link Dropdown Assistance<br>";
@@ -2068,7 +2069,7 @@
 			if(el.innerHTML != "") { el.innerHTML = ""; return; } //hide if already shown
 			
 			var str = "";
-			str += "Source row... ";
+			str += "Source... ";
 			str += "<input type='text' id='copyAndMoveRowsSrc' style='margin:-4px -2px -4px -1px;width:" + (el.offsetWidth-6) + "px; height:" + (el.offsetHeight-8) + "px' value='0'>";
 			str += "<br>";
 			str += "Destination row (-1 for new last row)... ";
@@ -2078,11 +2079,29 @@
 			str += "<div id='copyAndMoveRowsHTML' style='display:none'></div>";
 			
 			str += "<br><br>";
-			str += "<input type='button' onmouseup='configCopyRow(0)' value='Copy'/>";
+			str += "<input type='button' onmouseup='configCopyRow(0)' value='Copy Row'/>";
 			str += " ";
-			str += "<input type='button' onmouseup='configCopyRow(1)' value='Move'/>";
+			str += "<input type='button' onmouseup='configCopyRow(1)' value='Move Row'/>";
+			str += " ";
+			str += "<input type='button' onmouseup='configCopyView()' value='" +
+					"Copy Source Version to new Temporary Version'/>";			
+			str += "<br><br>";
 			el.innerHTML = str;	
 		}	
+		
+		//configCopyView ~~
+		function configCopyView()
+		{
+			var src = document.getElementById("copyAndMoveRowsSrc").value;	
+			Debug.log("configCopyView src=" + src);	
+			Debug.log("configCopyView _currentConfigName=" + _currentConfigName);
+			
+			
+			DesktopContent.XMLHttpRequest("Request?RequestType=copyViewToCurrentColumns" +
+					"&configName=" + _currentConfigName +
+					"&sourceVersion=" + src,
+					"", specificGroupRequestHandler);
+		}
 		
 		//configCopyRow
 		function configCopyRow(deleteSrc)
