--- a/WebGUI/html/ConfigurationTableEditor.html
+++ b/WebGUI/html/ConfigurationTableEditor.html
@@ -73,8 +73,8 @@
 			var err = DesktopContent.getXMLValue(req,"Error");
 			if(err) 
 			{
-				Debug.log(err,Debug.HIGH_PRIORITY);		
-				return;
+				Debug.log(err,Debug.HIGH_PRIORITY);
+				//attemp to power through
 			}
 
 			var configNames = req.responseXML.getElementsByTagName("ConfigurationName");
