Delete table feature added, also warning popup

--- a/WebGUI/html/ConfigurationGUI.html
+++ b/WebGUI/html/ConfigurationGUI.html
@@ -163,17 +163,13 @@
 		function init() {			
 			Debug.log("CfgGUI init");
 						
-			//setupSpecificConfig("XDAQContextConfiguration","8",
-			//"setupTableViewMode('anchorTag-XDAQContextConfiguration');");
-			//return;
+			//setupSpecificConfig("XDAQContextConfiguration","8","setupTableViewMode('anchorTag-XDAQContextConfiguration');"); return;
 
-			//setupSpecificConfigGroup("PhysicsWizToLatest","3",
-				//	"");//"","anchorTag-RawDataSaverConsumerConfiguration");
-			//return;
+			//setupSpecificConfigGroup("PhysicsWizToLatest","3","","anchorTag-RawDataSaverConsumerConfiguration"); return;
 			
 			//setupConfigCreator(); return
 			
-			//setupConfigGroupTreeView("PhysicsWizToLatest","3"); return;
+			setupConfigGroupTreeView("PhysicsWizToLatest","3"); return;
 			
 			//setupGroupViewMode(); return;
 
