--- a/WebGUI/html/EditSecurity.html
+++ b/WebGUI/html/EditSecurity.html
@@ -6,7 +6,7 @@
 <script type="text/JavaScript" src="/WebPath/js/Debug.js"></script>	
 <script type="text/JavaScript" src="/WebPath/js/DesktopWindowContentCode.js"></script>
 <script type="text/JavaScript" src="/WebPath/js/EditSecurity.js"></script>
-<link rel="stylesheet" type="text/css" href="../css/EditSecurity.css">
+<link rel="stylesheet" type="text/css" href="/WebPath/css/EditSecurity.css">
 <style>
 
 </style>
@@ -33,7 +33,7 @@
   	<div class="bg"></div>
   	
   	<div class="base">
-  		<img src="../images/windowContentImages/editSecurity-noSecurity.png" alt="" />
+  		<img src="/WebPath/images/windowContentImages/editSecurity-noSecurity.png" alt="" />
   	</div>
    </div>	
   </div>	
@@ -52,7 +52,7 @@
   		<a href="#" onclick="setSecurity('DigestAccessAuthentication')" class="button">Select</a>		
   	</div>
   	<div class="bg"></div>	<div class="base">
-  		<img src="../images/windowContentImages/editSecurity-Digest.png" alt="" />
+  		<img src="/WebPath/images/windowContentImages/editSecurity-Digest.png" alt="" />
   	</div>
   </div>	
   </div>  	
@@ -73,7 +73,7 @@
   	</div>
   	<div class="bg"></div>
   	<div class="base">
-  		<img src="../images/windowContentImages/editSecurity-Cerberus.png" alt="" />
+  		<img src="/WebPath/images/windowContentImages/editSecurity-Cerberus.png" alt="" />
   	</div>
   </div>	
   </div> 	
@@ -93,7 +93,7 @@
 	</div>
 	<div class="bg"></div>
 	<div class="base">
-		<img src="../images/windowContentImages/editSecurity-Reset.png" alt="" />
+		<img src="/WebPath/images/windowContentImages/editSecurity-Reset.png" alt="" />
 	</div>
   </div>	
   </div> 	
