--- a/WebGUI/html/IconEditor.html
+++ b/WebGUI/html/IconEditor.html
@@ -66,7 +66,7 @@
 	}
 </style>
 
-	<link href='../css/fonts.css?family=Comfortaa:700,400&subset=latin,greek' rel='stylesheet' type='text/css'>
+	<link href='/WebPath/css/fonts.css?family=Comfortaa:700,400&subset=latin,greek' rel='stylesheet' type='text/css'>
 </head>
 
 <body onload="init()">
@@ -74,7 +74,7 @@
 	<h1>Icon Editor</h1>
     
 	<a href = "javascript:void(0)" onclick = "document.getElementById('light').style.display='block';document.getElementById('fade').style.display='block'">
-		<img src="../images/dashboardImages/icon-Help.png"</img>
+		<img src="/WebPath/images/dashboardImages/icon-Help.png"</img>
 	</a>
   
 	<div id="iconDropdown"></div>
