--- a/WebGUI/html/MacroMaker.html
+++ b/WebGUI/html/MacroMaker.html
@@ -571,10 +571,10 @@
 			</small></p>
 			<div class="right">
 				<a href="https://docs.google.com/a/iit.edu/document/d/1tTeaO9wKnVJshU9OrY7FFOGC39TTIieD1uZ9cTtY-hs/edit?usp=sharing" target="_blank">
-					<img src="../images/windowContentImages/macromaker-information.png" alt="Info" id="infoButton"
+					<img src="/WebPath/images/windowContentImages/macromaker-information.png" alt="Info" id="infoButton"
 				     width='26' height='26' title="Info"/>
 				</a>
-				<img src="../images/windowContentImages/macromaker-refresh.png" alt="Refresh" id="refreshButton" 
+				<img src="/WebPath/images/windowContentImages/macromaker-refresh.png" alt="Refresh" id="refreshButton" 
 					width='20' height='20' onclick="init()" title="Refresh"/>
 			</div>
 		</div>
