--- a/WebGUI/html/SuiteLocal.html
+++ b/WebGUI/html/SuiteLocal.html
@@ -3,18 +3,18 @@
 	<head>
 		<title>ots</title>
 		<meta charset="utf-8">
-		<link rel="stylesheet" type="text/css" href="../css/ots.css">
-		<link rel="stylesheet" type="text/css" href="../css/Desktop.css">
+		<link rel="stylesheet" type="text/css" href="/WebPath/css/ots.css">
+		<link rel="stylesheet" type="text/css" href="/WebPath/css/Desktop.css">
 
 		<style type="text/css">		
 			
 		</style>		
 		
 		<link rel='stylesheet' type='text/css' href='http://fonts.googleapis.com/css?family=Donegal+One'>
-		<script type="text/JavaScript" src="../js/Debug.js"></script>	
-		<script type="text/JavaScript" src="../js/Desktop.js"></script>
-		<script type="text/JavaScript" src="../js/DesktopDashboard.js"></script>
-		<script type="text/JavaScript" src="../js/DesktopWindow.js"></script>
+		<script type="text/JavaScript" src="/WebPath/js/Debug.js"></script>	
+		<script type="text/JavaScript" src="/WebPath/js/Desktop.js"></script>
+		<script type="text/JavaScript" src="/WebPath/js/DesktopDashboard.js"></script>
+		<script type="text/JavaScript" src="/WebPath/js/DesktopWindow.js"></script>
 		
 		<script>
 			var urnLid = ((window.location.search.substr(1)).split('='))[1];
@@ -26,7 +26,7 @@
 			}
 			
 			function newWindow() { 
-				Desktop.desktop.addWindow("Name","Subname","../html/Supervisor.html");
+				Desktop.desktop.addWindow("Name","Subname","/WebPath/html/Supervisor.html");
 			}
 		</script>
 		
