--- a/WebGUI/html/Console.html
+++ b/WebGUI/html/Console.html
@@ -3,8 +3,8 @@
 	<head>
 		<title>Supervisor</title>
 
-		<link href='../css/fonts.css?family=Comfortaa:700,400&subset=latin,greek' rel='stylesheet' type='text/css'>
-		<link href='../css/fonts.css?family=Inconsolata:400' rel='stylesheet' type='text/css'>
+		<link href='/WebPath/css/fonts.css?family=Comfortaa:700,400&subset=latin,greek' rel='stylesheet' type='text/css'>
+		<link href='/WebPath/css/fonts.css?family=Inconsolata:400' rel='stylesheet' type='text/css'>
 				
 		<script type="text/JavaScript" src="/WebPath/js/Globals.js"></script>	
 		<script type="text/JavaScript" src="/WebPath/js/Debug.js"></script>	
@@ -217,7 +217,7 @@
 
 		<!-- MultiSelectBox: Must include .css style sheet and .js functionality -->
 		<link rel="stylesheet" type="text/css" href="/WebPath/css/MultiSelectBox.css">
-		<script src="../js/js_lib/MultiSelectBox.js"></script>
+		<script src="/WebPath/js/js_lib/MultiSelectBox.js"></script>
 
 		<script>		
 			
