Configuration GUI changed

--- a/WebGUI/html/ConfigurationGUI.html
+++ b/WebGUI/html/ConfigurationGUI.html
@@ -223,7 +223,7 @@
 			
 			//setupConfigCreator(); return
 			
-			setupConfigGroupTreeView("aaContext","11"); return;
+//			setupConfigGroupTreeView("aaContext","11"); return;
 			
 			//setupGroupViewMode(); return;
 
